CORE-50632: Fixed recent orders aura points spacing.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-myaccount/component/_aura-recent-orders-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-myaccount/component/_aura-recent-orders-points.scss
@@ -48,7 +48,7 @@
       &.has-aura-points {
         @include breakpoint($desktop) {
           html[lang="ar"] & {
-            padding-right: rem(8);
+            padding-#{$left}: 0;
           }
         }
       }
